--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -59,18 +59,122 @@
     "\n",
     "Let's enhance your code by implementing error handling to handle invalid inputs.\n",
     "\n",
-    "Follow the steps below to complete the exercise:\n",
-    "\n",
+    "Follow the steps below to complete the exercise:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af6071ca",
+   "metadata": {},
+   "source": [
     "2. Modify the `calculate_total_price` function to include error handling.\n",
     "   - If the user enters an invalid price (e.g., a negative value or a non-numeric value), display an error message and ask them to re-enter the price for that product.\n",
-    "   - Use a try-except block to handle the error and continue prompting the user until a valid price is entered.\n",
+    "   - Use a try-except block to handle the error and continue prompting the user until a valid price is entered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ebb7cdc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Products ordered:\n",
+      "{'hat', 'book', 'mug'}\n",
+      "Error: hat Price cannot be negative. Please enter the price again.\n",
+      "Total Price: 130.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
     "\n",
+    "def get_customer_orders(products):\n",
+    "    num_orders = int(input(\"Enter the number of products to order: \"))\n",
+    "    customer_orders = {\n",
+    "        item\n",
+    "        for item in [input(f\"What product do you want to order ({', '.join(products)})? \") for _ in range(num_orders)]\n",
+    "        if item in products\n",
+    "    }\n",
+    "    return customer_orders\n",
+    "\n",
+    "customer_orders = get_customer_orders([\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"])\n",
+    "\n",
+    "print(\"Products ordered:\")\n",
+    "print(customer_orders)\n",
+    "\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    total_price = 0\n",
+    "    for item in customer_orders:\n",
+    "        while True:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price of {item}: \"))\n",
+    "                if price < 0:\n",
+    "                    print(\"Error:\",item,\"Price cannot be negative. Please enter the price again.\")\n",
+    "                else:\n",
+    "                    total_price += price\n",
+    "                    break\n",
+    "            except ValueError:\n",
+    "                print(\"Error: Invalid input. Please enter a numeric value.\")\n",
+    "    print(\"Total Price:\", total_price)\n",
+    "    return total_price\n",
+    "\n",
+    "total_price = calculate_total_price(customer_orders)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416d6050",
+   "metadata": {},
+   "source": [
     "3. Modify the `get_customer_orders` function to include error handling.\n",
     "   - If the user enters an invalid number of orders (e.g., a negative value or a non-numeric value), display an error message and ask them to re-enter the number of orders.\n",
     "   - If the user enters an invalid product name (e.g., a product name that is not in the inventory), or that doesn't have stock available, display an error message and ask them to re-enter the product name. *Hint: you will need to pass inventory as a parameter*\n",
-    "   - Use a try-except block to handle the error and continue prompting the user until a valid product name is entered.\n",
+    "   - Use a try-except block to handle the error and continue prompting the user until a valid product name is entered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "22c5bd53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_customer_orders(inventory):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            num_orders = int(input(\"Enter the number of customer orders: \"))\n",
+    "            if num_orders <= 0:\n",
+    "                print(\"Error: Number of orders must be greater than zero.\")\n",
+    "                continue\n",
+    "            break\n",
+    "        except ValueError:\n",
+    "            print(\"Error: Please enter a valid numeric value.\")\n",
     "\n",
-    "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected.\n"
+    "    customer_orders = set()\n",
+    "    for _ in range(num_orders):\n",
+    "        while True:\n",
+    "            item = input(\"Enter the name of a product that a customer wants to order: \").strip().lower()\n",
+    "            if item not in inventory:\n",
+    "                print(\"Error: Product not found in inventory. Please enter a valid product name.\")\n",
+    "            elif inventory[item] <= 0:\n",
+    "                print(f\"Error: {item} is out of stock. Please choose another product.\")\n",
+    "            else:\n",
+    "                customer_orders.add(item)\n",
+    "                break\n",
+    "    return customer_orders\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12de76b6",
+   "metadata": {},
+   "source": [
+    "4. Test your code by running the program and deliberately entering invalid quantities and product names. Make sure the error handling mechanism works as expected."
    ]
   }
  ],
@@ -90,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
